2000-11-14  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* Makefile.in:
	    Mark version "2.99.55-pre1cvs" (which means nothing much)

	* include/ta.h, transports/libta/fwriteheaders.c,
	  transports/libta/swriteheaders.c, transports/libta/markoff.c,
	  transports/libta/mime2headers.c, transports/libta/mimeheaders.c,
	  transports/libta/stringlib.c, transports/smtp/appendlet.c,
	  transports/smtp/smtp.c, transports/smtp/smtp.h:
	    Initial steps towards doing proper format downgrade
	    during (SMTP) transport.
	    - Modified header handling to process folded lines as single
	      string, not as a sequence of strings.
	    - Wrote proper RFC822/MIME token scanner into  mimeheaders.c
	      which is able to correctly skip over places where (folded)LWSP
	      is allowed, including possible (comments) in them.

2000-11-12  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* Marked this as  zmailer-2-99-54-patch1

	* lib/selfaddrs.c:
	    Learned something about the SIOCGIFFLAGS/SIOCGLIFFLAGS
	    ioctl parameters, and what is necessary for initializing
	    its call.

	* transports/smtp/smtp.c:
	    Some oddball moments don't fail properly after response
	    timeout during certain critical periods -- mainly of DATA/RSET.
	    Doing   smtpclose()  where we used to RSET  right after
	    DATA has been sent, and response to it has been waited
	    for way too long..

2000-11-02  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* smtpserver/smtpserver.h, smtpserver/smtpserver.c:
	    Turn the listening sockets into NON-BLOCKING mode,
	    and once connection is accept(2)ed, turn the communication
	    socket into blocking mode.

	* transports/smtp/getmxrr.c:
	    Randomish bounces seen at  vger.kernel.org  for domains
	    which have non-functional DNS servers (likely due to
	    network failure, or some such.)  Symptom seems to
	    indicate NXDOMAIN DNS query reply status, but the
	    darn thing happens *rarely*...