@@ -142,7 +142,7 @@ struct sockaddr ***sockaddrp;
 		return -5; /* UAARGH! */
 	      }
 
-	      if (sa->sa.sa_family == AF_INET) {
+	      if (sa->sa_family == AF_INET) {
 		struct sockaddr_in *si4 = (void*)malloc(sizeof(*si4));
 		if (si4 == NULL)
 		  break;
@@ -153,7 +153,7 @@ struct sockaddr ***sockaddrp;
 	      }
 
 #if defined(AF_INET6) && defined(INET6)
-	      if (sa->sa.sa_family == AF_INET6) {
+	      if (sa->sa_family == AF_INET6) {
 		struct sockaddr_in6 *si6 = (void*)malloc(sizeof(*si6));
 		if (si6 == NULL)
 		  break;
